# preso

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/actions/gstreamer/: action.yml
.github/workflows/: ci.yml  docs.yml  homebrew.yml  release.yml
assets/icons/: preso.icns
assets/linux/: preso.desktop
assets/themes/: dark.toml  light.toml
crates/preso-app/: Cargo.toml  build.rs
crates/preso-app/src/: app.rs  audience.rs  export.rs  hot_reload.rs  include.rs  keyboard.rs  main.rs  media.rs  monitors.rs  overlay.rs  presenter.rs  render.rs  timer.rs  transition.rs  video.rs  window_state.rs
crates/preso-convert/: Cargo.toml  README.md
crates/preso-convert/src/: lib.rs  main.rs  pptx.rs  slidev.rs  slidev_export.rs
crates/preso-convert/src/pptx_export/: blocks.rs  mod.rs  xml.rs
crates/preso-convert/src/rules/: cleanup.rs  clicks.rs  code.rs  columns.rs  frontmatter.rs  images.rs  mod.rs  notes.rs
crates/preso-core/: Cargo.toml
crates/preso-core/benches/: parse_bench.rs
crates/preso-core/src/: error.rs  fence.rs  include.rs  lib.rs  model.rs  parser.rs  state.rs
crates/preso-core/tests/: perf.rs
crates/preso-diagram/: Cargo.toml
crates/preso-diagram/src/: lib.rs
crates/preso-export/: Cargo.toml
crates/preso-export/src/: lib.rs  pptx.rs
crates/preso-style/: Cargo.toml
crates/preso-style/src/: lib.rs  model.rs  registry.rs
docs/: example-talk.md
docs/guide/: book.toml  gen-screenshots.sh  render-page.swift
docs/guide/src/: SUMMARY.md  exporting.md  introduction.md  migrating.md
docs/guide/src/appendix/: changelog.md  rendering.md
docs/guide/src/getting-started/: first-deck.md  installation.md  presenting.md
docs/guide/src/reference/: cli.md  directives.md  keyboard.md  theme-schema.md
docs/guide/src/theming/: basics.md  chrome.md  colors.md  complete-theme.md  elements.md  fonts.md  overlays.md  spacing.md
docs/guide/src/writing/: alignment.md  code.md  diagrams.md  images.md  math.md  reveal-steps.md  slide-kinds.md  structure.md  text-tables.md  two-columns.md  video.md
docs/themes/: corporate.toml
scripts/: gen-homebrew-formulae.sh  gen-icons.sh  release-local.sh
