[package]
name = "preso-convert"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Convert Slidev decks and PowerPoint files into preso markdown format"

[[bin]]
name = "preso-convert"
path = "src/main.rs"

[dependencies]
preso-core = { workspace = true }
# The editable .pptx exporter renders math/Mermaid/Graphviz to PNG and
# reads image dimensions for sizing.
preso-diagram = { workspace = true }
image = { workspace = true }
clap = { workspace = true }
serde_norway = { workspace = true }
anyhow = { workspace = true }
# PowerPoint (.pptx) import: a zip of XML (roxmltree is already in the
# tree via resvg).
zip = { workspace = true }
roxmltree = "0.20"
