[package]
name = "preso-core"
description = "Markdown → slide deck model for preso"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_norway = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false
