[package]
name = "preso-diagram"
description = "Math (RaTeX) and Mermaid rendering to SVG/raster for preso"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ratex-parser = "0.1"
ratex-layout = "0.1"
ratex-svg = { version = "0.1", features = ["embed-fonts"] }
ratex-types = "0.1"
mermaid-rs-renderer = "0.2"
resvg = { workspace = true }
thiserror = { workspace = true }
layout-rs = "0.1.3"
