[package]
name = "preso-export"
description = "PDF assembly for preso (bitmap-per-slide)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# The PDF is assembled directly with lopdf so each slide image can pick its own
# codec (lossless Flate for flat/text slides, JPEG for photographic ones) —
# printpdf only allows one codec for the whole document.
lopdf = { version = "0.42", default-features = false, features = ["time"] }
image = { workspace = true }
flate2 = "1"
# Bitmap .pptx export: an OOXML zip with one full-bleed picture per slide.
zip = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# The pptx round-trip test reads exports back with preso's own importer.
preso-convert = { path = "../preso-convert" }
preso-core = { workspace = true }
