[package]
name = "preso-style"
description = "Theme configuration for preso"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
